--- a/CardioHealth/TasksAndSteps/HeartAgeControllers/APHHeartAgeResultsViewController.xib
+++ b/CardioHealth/TasksAndSteps/HeartAgeControllers/APHHeartAgeResultsViewController.xib
@@ -15,52 +15,66 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+            <rect key="frame" x="0.0" y="64" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Survey Completed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="od0-TU-9hi">
-                    <rect key="frame" x="20" y="86" width="280" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ppY-os-KQf" customClass="APCCircularProgressView">
-                    <rect key="frame" x="125" y="8" width="70" height="70"/>
-                </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Your Heart Age Estimate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7VW-XV-f9g">
-                    <rect key="frame" x="20" y="128" width="280" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HoL-qp-Mpn" customClass="APHHeartAgeVersusView">
-                    <rect key="frame" x="20" y="157" width="280" height="130"/>
-                    <color key="backgroundColor" red="0.050980396570000003" green="0.45098042490000001" blue="0.70980393890000004" alpha="1" colorSpace="deviceRGB"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Survey Completed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="od0-TU-9hi">
+                    <rect key="frame" x="20" y="158" width="280" height="21"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="280" id="SGF-gR-BtM"/>
-                        <constraint firstAttribute="height" constant="130" id="rY6-6b-QmR"/>
+                        <constraint firstAttribute="height" constant="21" id="LNa-o5-oe3"/>
                     </constraints>
-                </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="10 Year Risk" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ACa-oz-ro3">
-                    <rect key="frame" x="20" y="307" width="280" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor." lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qpZ-8E-jLF">
-                    <rect key="frame" x="20" y="431" width="280" height="65"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ppY-os-KQf" customClass="APCCircularProgressView">
+                    <rect key="frame" x="125" y="80" width="70" height="70"/>
+                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Heart Age Estimate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7VW-XV-f9g">
+                    <rect key="frame" x="20" y="200" width="280" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="cZU-66-86Y"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HoL-qp-Mpn" customClass="APHHeartAgeVersusView">
+                    <rect key="frame" x="20" y="229" width="280" height="130"/>
+                    <color key="backgroundColor" red="0.050980396570000003" green="0.45098042490000001" blue="0.70980393890000004" alpha="1" colorSpace="deviceRGB"/>
+                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10 Year Risk" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ACa-oz-ro3">
+                    <rect key="frame" x="20" y="379" width="280" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="ZOm-mz-2og"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor." lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qpZ-8E-jLF">
+                    <rect key="frame" x="20" y="503" width="280" height="65"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="65" id="IAe-mD-2Q5"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor." lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5lE-0v-UHo">
-                    <rect key="frame" x="20" y="334" width="280" height="65"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor." lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5lE-0v-UHo">
+                    <rect key="frame" x="20" y="406" width="280" height="51"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="51" id="iDz-zc-aiV"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Some Room for Improvement" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X4B-nC-cAK">
-                    <rect key="frame" x="20" y="407" width="280" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Some Room for Improvement" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X4B-nC-cAK">
+                    <rect key="frame" x="20" y="479" width="280" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="q27-Jh-fL6"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
@@ -68,25 +82,33 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="qpZ-8E-jLF" secondAttribute="trailing" constant="20" id="0BG-um-wdh"/>
-                <constraint firstAttribute="trailing" secondItem="7VW-XV-f9g" secondAttribute="trailing" constant="20" id="1uj-zv-Nbo"/>
-                <constraint firstAttribute="trailing" secondItem="ppY-os-KQf" secondAttribute="trailing" constant="125" id="3UN-TH-eBz"/>
-                <constraint firstAttribute="trailing" secondItem="5lE-0v-UHo" secondAttribute="trailing" constant="20" id="Avj-6u-bdG"/>
-                <constraint firstItem="HoL-qp-Mpn" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="Dv1-z2-zzs"/>
-                <constraint firstItem="7VW-XV-f9g" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="DvW-1i-5gC"/>
-                <constraint firstAttribute="trailing" secondItem="HoL-qp-Mpn" secondAttribute="trailing" constant="20" id="HJ8-oW-eRH"/>
-                <constraint firstAttribute="trailing" secondItem="ACa-oz-ro3" secondAttribute="trailing" constant="20" id="IPp-D6-LMH"/>
-                <constraint firstAttribute="trailing" secondItem="X4B-nC-cAK" secondAttribute="trailing" constant="20" id="IaF-L8-h1N"/>
-                <constraint firstItem="ppY-os-KQf" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="125" id="J2A-E2-bUj"/>
-                <constraint firstItem="5lE-0v-UHo" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="NI9-X9-HvP"/>
-                <constraint firstItem="ppY-os-KQf" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="8" id="Pxn-cY-oCX"/>
-                <constraint firstItem="od0-TU-9hi" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="RLH-9j-Po1"/>
-                <constraint firstAttribute="trailing" secondItem="od0-TU-9hi" secondAttribute="trailing" constant="20" id="S2E-7c-KEY"/>
-                <constraint firstItem="ACa-oz-ro3" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="ra9-NV-6rK"/>
-                <constraint firstItem="X4B-nC-cAK" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="ug1-Vy-CXf"/>
-                <constraint firstItem="qpZ-8E-jLF" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="y2n-3j-z8S"/>
+                <constraint firstItem="ppY-os-KQf" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="80" id="0sh-7B-xMF"/>
+                <constraint firstItem="HoL-qp-Mpn" firstAttribute="top" secondItem="7VW-XV-f9g" secondAttribute="bottom" constant="8" symbolic="YES" id="2FX-LJ-RJi"/>
+                <constraint firstItem="qpZ-8E-jLF" firstAttribute="trailing" secondItem="X4B-nC-cAK" secondAttribute="trailing" id="2Mn-3y-mT4"/>
+                <constraint firstItem="od0-TU-9hi" firstAttribute="top" secondItem="ppY-os-KQf" secondAttribute="bottom" constant="8" symbolic="YES" id="4tT-ie-SjX"/>
+                <constraint firstItem="7VW-XV-f9g" firstAttribute="top" secondItem="od0-TU-9hi" secondAttribute="bottom" constant="21" id="6ZP-fI-xnY"/>
+                <constraint firstItem="od0-TU-9hi" firstAttribute="centerX" secondItem="ppY-os-KQf" secondAttribute="centerX" id="6qI-jj-QKt"/>
+                <constraint firstItem="7VW-XV-f9g" firstAttribute="trailing" secondItem="od0-TU-9hi" secondAttribute="trailing" id="6si-XE-hEC"/>
+                <constraint firstItem="ppY-os-KQf" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="125" id="7DD-iG-TBr"/>
+                <constraint firstItem="7VW-XV-f9g" firstAttribute="trailing" secondItem="HoL-qp-Mpn" secondAttribute="trailing" id="7as-6L-Cqr"/>
+                <constraint firstItem="qpZ-8E-jLF" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="D6w-RW-Pp9"/>
+                <constraint firstAttribute="bottom" secondItem="qpZ-8E-jLF" secondAttribute="bottom" id="FBx-jq-G2i"/>
+                <constraint firstItem="ACa-oz-ro3" firstAttribute="leading" secondItem="5lE-0v-UHo" secondAttribute="leading" id="NUt-fJ-SLy"/>
+                <constraint firstItem="ACa-oz-ro3" firstAttribute="trailing" secondItem="HoL-qp-Mpn" secondAttribute="trailing" id="QDV-1g-XPS"/>
+                <constraint firstItem="X4B-nC-cAK" firstAttribute="trailing" secondItem="5lE-0v-UHo" secondAttribute="trailing" id="RSI-cv-ibn"/>
+                <constraint firstItem="ACa-oz-ro3" firstAttribute="trailing" secondItem="5lE-0v-UHo" secondAttribute="trailing" id="U3R-rL-toN"/>
+                <constraint firstItem="X4B-nC-cAK" firstAttribute="top" secondItem="5lE-0v-UHo" secondAttribute="bottom" constant="22" id="X5c-tC-BX2"/>
+                <constraint firstItem="X4B-nC-cAK" firstAttribute="leading" secondItem="5lE-0v-UHo" secondAttribute="leading" id="Ygi-Dp-Q9K"/>
+                <constraint firstItem="qpZ-8E-jLF" firstAttribute="leading" secondItem="X4B-nC-cAK" secondAttribute="leading" id="dH1-ax-Vnh"/>
+                <constraint firstItem="qpZ-8E-jLF" firstAttribute="top" secondItem="X4B-nC-cAK" secondAttribute="bottom" constant="3" id="gkx-Ub-6LF"/>
+                <constraint firstItem="ACa-oz-ro3" firstAttribute="top" secondItem="HoL-qp-Mpn" secondAttribute="bottom" constant="20" id="hA2-cb-P26"/>
+                <constraint firstItem="7VW-XV-f9g" firstAttribute="leading" secondItem="od0-TU-9hi" secondAttribute="leading" id="lAy-9u-1om"/>
+                <constraint firstItem="od0-TU-9hi" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="158" id="p8s-p2-3Zk"/>
+                <constraint firstItem="5lE-0v-UHo" firstAttribute="top" secondItem="ACa-oz-ro3" secondAttribute="bottom" constant="6" id="rjR-il-way"/>
+                <constraint firstItem="ACa-oz-ro3" firstAttribute="leading" secondItem="HoL-qp-Mpn" secondAttribute="leading" id="vJc-NJ-Gvt"/>
+                <constraint firstItem="7VW-XV-f9g" firstAttribute="leading" secondItem="HoL-qp-Mpn" secondAttribute="leading" id="vKN-yb-Zfg"/>
+                <constraint firstItem="od0-TU-9hi" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="w5E-G5-88u"/>
             </constraints>
-            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
